force-app/main/default/objects/HR_Leads__c/HR_Leads__c.object-meta.xml
<CustomObject>
    <description>This is custom object for all the leads flowing through social media!</description>
    <label>HR Lead</label>
    <nameField>
        <displayFormat>HRApp-{00000}</displayFormat>
        <label>HR Leads Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HR Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>