force-app/main/default/objects/HR_Leads__c/fields/Ad_Ad_Name__c.field-meta.xml
<CustomField>
    <fullName>Ad_Ad_Name__c</fullName>
    <label>Ad Ad Name</label>
    <type>TextArea</type>
</CustomField>