force-app/main/default/objects/HR_Leads__c/fields/Ad_AdSet_Name__c.field-meta.xml
<CustomField>
    <fullName>Ad_AdSet_Name__c</fullName>
    <label>Ad AdSet Name</label>
    <type>TextArea</type>
</CustomField>