force-app/main/default/objects/HR_Leads__c/fields/Ad_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Ad_Campaign_Name__c</fullName>
    <label>Ad Campaign Name</label>
    <type>TextArea</type>
</CustomField>