force-app/main/default/objects/HR_Leads__c/fields/Ad_Platform__c.field-meta.xml
<CustomField>
    <fullName>Ad_Platform__c</fullName>
    <label>Ad Platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>