force-app/main/default/objects/HR_Leads__c/fields/AD_set_ID__c.field-meta.xml
<CustomField>
    <fullName>AD_set_ID__c</fullName>
    <label>AD set ID</label>
    <length>55</length>
    <type>Text</type>
</CustomField>