force-app/main/default/objects/HR_Leads__c/fields/Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID__c</fullName>
    <label>Campaign_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>