force-app/main/default/objects/HR_Leads__c/fields/Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Time__c</fullName>
    <label>Created_Time</label>
    <type>DateTime</type>
</CustomField>