force-app/main/default/objects/HR_Leads__c/fields/Desired_position__c.field-meta.xml
<CustomField>
    <fullName>Desired_position__c</fullName>
    <label>Desired position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>