force-app/main/default/objects/HR_Leads__c/fields/Is_Organic__c.field-meta.xml
<CustomField>
    <fullName>Is_Organic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Organic</label>
    <type>Checkbox</type>
</CustomField>