force-app/main/default/objects/HR_Leads__c/fields/Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Onboarding__c</fullName>
    <label>Onboarding</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needs ADP</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Zoho</fullName>
            </value>
            <value>
                <fullName>Calltracking Metrics</fullName>
            </value>
            <value>
                <fullName>Accounting Seed</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>SIP Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>