force-app/main/default/objects/HR_Leads__c/fields/Share_your_social_profile_with_us__c.field-meta.xml
<CustomField>
    <fullName>Share_your_social_profile_with_us__c</fullName>
    <label>Share your social profile with us</label>
    <type>Url</type>
</CustomField>