force-app/main/default/objects/HR_Leads__c/fields/Snapchat__c.field-meta.xml
<CustomField>
    <fullName>Snapchat__c</fullName>
    <label>Snapchat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>