force-app/main/default/objects/HR_Leads__c/fields/Tell_us_more_about_you__c.field-meta.xml
<CustomField>
    <fullName>Tell_us_more_about_you__c</fullName>
    <label>Tell us more about you</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>