force-app/main/default/objects/HR_Leads__c/fields/TikTok__c.field-meta.xml
<CustomField>
    <fullName>TikTok__c</fullName>
    <label>TikTok</label>
    <length>255</length>
    <type>Text</type>
</CustomField>