force-app/main/default/objects/HR_Leads__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Desired_position__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Ad_AdSet_Name__c</columns>
    <columns>Ad_Name__c</columns>
    <columns>Platform__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>