force-app/main/default/objects/HR_Leads__c/listViews/HR_Human_Resources_HR_Leads.listView-meta.xml
<ListView>
    <fullName>HR_Human_Resources_HR_Leads</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Desired_position__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <label>HR - Human Resources</label>
    <queue>HR_Human_Resources</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>